# Appium78

./: README.md  pyproject.toml
script/: release.py
src/appium78/: __init__.py  appium78.py  main.py
src/www778878net/: __init__.py  appium78.py
